Fix credit score guide MDX

--- a/content/banking/credit-score-guide.mdx
+++ b/content/banking/credit-score-guide.mdx
@@ -12,7 +12,7 @@ featured: true
 featureImage: "/images/articles/credit-score.jpg"
 featureImageAlt: "Credit Score Guide"
 seoKeywords: ["credit score india", "cibil score", "how to improve credit score", "check credit score free", "credit report", "credit history"]
-relatedArticles: ["personal-loan-guide", "credit-card-basics", "loan-approval-tips"]
+relatedArticles: ["banking-basics", "loans-and-emis", "neobanks-vs-traditional"]
 ---
 
 Your credit score is one of the most important numbers in your financial life. It determines whether you'll get approved for loans, the interest rates you'll pay, and even affects job applications and rental agreements. This comprehensive guide will help you understand and master your credit score in India.
@@ -297,7 +297,7 @@ Options for credit score beginners:
 2. **Maxing Out Credit Cards**
    - Impact: -30 to -80 points
    - Duration: Updates monthly
-   - Fix: Pay down to <30% utilization
+   - Fix: Pay down to &lt;30% utilization
 
 3. **Loan Settlement**
    - Impact: -100 to -200 points
@@ -331,7 +331,7 @@ Options for credit score beginners:
 | 750+ | 8.5-9.0% | 95% | Full requested |
 | 700-749 | 9.0-9.5% | 80% | 80-100% |
 | 650-699 | 9.5-10.5% | 50% | 60-80% |
-| Below 650 | 11%+ or Rejected | <30% | Minimal |
+| Below 650 | 11%+ or Rejected | &lt;30% | Minimal |
 
 **Impact Example:**
 Loan amount: ₹50 lakh, 20 years
@@ -424,7 +424,7 @@ Starting from different scores:
 3. **Too Many Inquiries**: 3+ in 3 months
 4. **Frequent Job Changes**: Unstable income
 5. **Multiple Loans**: High debt-to-income ratio
-6. **Short Credit History**: <2 years
+6. **Short Credit History**: &lt;2 years
 7. **Only Unsecured Debt**: No secured loans
 8. **Settled Accounts**: Didn't pay in full
 
