Fix related links in economy overview

--- a/content/economy/indian-economy-overview-2025.mdx
+++ b/content/economy/indian-economy-overview-2025.mdx
@@ -12,7 +12,7 @@ featured: true
 featureImage: "/images/articles/indian-economy-2025.jpg"
 featureImageAlt: "Indian Economy Overview 2025"
 seoKeywords: ["indian economy 2025", "india gdp growth", "indian economy overview", "india economic outlook", "india inflation rate", "rbi monetary policy"]
-relatedArticles: ["inflation-explained", "monetary-policy-basics", "gdp-explained"]
+relatedArticles: ["inflation-explained", "interest-rates-monetary-policy", "indian-economy-explained"]
 ---
 
 India's economy continues to be one of the brightest spots in the global economic landscape. As the world's fifth-largest economy by nominal GDP and third-largest by purchasing power parity (PPP), India is on a trajectory to become a $5 trillion economy. This comprehensive analysis examines the key drivers of growth, challenges ahead, and what the future holds for one of the world's most dynamic economies.
